load("//bzl:rules.bzl",
     "boot_library",
     "baseline_module",
     "baseline_signature",
)

exports_files([
    "debuginfo.mli", "debuginfo.ml",
    "lambda.mli", "lambda.ml",
    "runtimedef.mli",
    ## this is exported by genrule: "runtimedef.ml"
])

# make log:
# ./boot/ocamlrun ./ocamlopt
# -nostdlib -I ./stdlib -I otherlibs/dynlink
# -g -strict-sequence -principal -absname -w +a-4-9-40-41-42-44-45-48 -warn-error +a -bin-annot -strict-formats
# -I lambda ... -I toplevel
# -c lambda/debuginfo.ml

MODULE_OPTS = []
SIG_OPTS    = []

boot_library(
    name = "lambda",
    manifest  = [
        ":Debuginfo",
        ":Lambda",
        ":Matching",
        ":Printlambda",
        ":Runtimedef",
        ":Simplif",
        ":Switch",
        ":Translattribute",
        ":Translclass",
        ":Translcore",
        ":Translmod",
        ":Translobj",
        ":Translprim",
    ],
)

boot_library(
    name = "ocamlcommon",
    manifest  = [
        ":Debuginfo",
        ":Lambda",
        ":Matching",
        ":Printlambda",
        ":Runtimedef",
        ":Simplif",
        ":Switch",
        ":Tmc",
        ":Translattribute",
        ":Translclass",
        ":Translcore",
        ":Translmod",
        ":Translobj",
        ":Translprim",
    ],
    visibility = ["//compilerlibs:__pkg__"]
)

################################################################
baseline_module(
    name   = "Debuginfo",
    struct = "debuginfo.ml",
    sig    = "Debuginfo_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Printf",
        "//parsing:Location",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Lexing",
        "//utils:Int_replace_polymorphic_compare",
        "//typing:Ident",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Format",
    ],
    visibility = [
        "//asmcomp:__pkg__",
        "//bytecomp:__pkg__",
        "//middle_end:__subpackages__",
        "//otherlibs/dynlink:__pkg__",
    ]
)

baseline_signature(
    name = "Debuginfo_cmi",
    src  = "debuginfo.mli",
    opts = SIG_OPTS,
    deps   = [
        "//parsing:Asttypes_cmi", # => "//parsing:Location_cmi",
        "//typing:Ident_cmi",
        "//stdlib:Stdlib.Format",
    ],
    visibility = ["//middle_end:__pkg__"]
)

baseline_module(
    name   = "Lambda",
    struct = "lambda.ml",
    sig    = "Lambda_cmi",
    opts = MODULE_OPTS + ["-w", "-40"], ## name-out-of-scope
    deps   = [
        ":Debuginfo",
        "//typing:Types",
        "//typing:Primitive",
        "//typing:Path",
        "//stdlib:Stdlib.Option",
        "//utils:Misc",
        "//parsing:Longident",
        "//stdlib:Stdlib.List",
        "//typing:Ident",
        "//typing:Env",
        "//utils:Clflags",
    ],
    visibility = [
        "//asmcomp:__pkg__",
        "//bytecomp:__pkg__",
        "//file_formats:__pkg__",
        "//middle_end:__subpackages__",
        "//otherlibs/dynlink:__pkg__",
        "//typing:__pkg__",
    ],
)

baseline_signature(
    name = "Lambda_cmi",
    src  = "lambda.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Debuginfo", ## (Lambda Debuginfo)
        "//typing:Types_cmi",
        "//typing:Primitive",
        "//typing:Path",
        "//typing:Ident",
        "//typing:Env_cmi",
        "//parsing:Asttypes_cmi",
    ],
    visibility = [
        "//asmcomp:__pkg__",
        "//bytecomp:__pkg__",
        "//middle_end:__pkg__",
        "//typing:__pkg__"
    ]
)

baseline_module(
    name   = "Matching",
    struct = "matching.ml",
    sig    = "Matching_cmi",
    opts = MODULE_OPTS + ["-w", "-40"], ## name-out-of-scope
    deps   = [
        ":Switch", ## (Lambda Switch)
        ":Printlambda", ## (Lambda Printlambda)
        ":Lambda", ## (Lambda Lambda)
        ":Debuginfo", ## (Lambda Debuginfo)
        "//typing:Types",
        "//typing:Typeopt",
        "//typing:Typedtree",
        ## (Printpat)
        "//stdlib:Stdlib.Printf",
        "//typing:Primitive",
        "//typing:Predef",
        ## (Patterns)
        "//typing:Parmatch",
        "//stdlib:Stdlib.Option",
        "//stdlib:Stdlib.Obj",
        "//utils:Misc",
        "//parsing:Longident",
        "//parsing:Location",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Lazy",
        "//typing:Ident",
        ## (Head)
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Format",
        "//typing:Env",
        "//utils:Clflags",
        "//stdlib:Stdlib.Char",
        "//typing:Btype",
        "//stdlib:Stdlib.Array",
    ],
    visibility = ["//bytecomp:__pkg__"]
)

baseline_signature(
    name = "Matching_cmi",
    src  = "matching.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Lambda", ## (Lambda Lambda)
        ":Debuginfo", ## (Lambda Debuginfo)
        "//parsing:Asttypes_cmi",
        "//typing:Typedtree_cmi",
        "//parsing:Location",
        "//typing:Ident",
    ]
)

baseline_module(
    name   = "Printlambda",
    struct = "printlambda.ml",
    sig    = "Printlambda_cmi",
    opts = MODULE_OPTS + ["-w", "-40"], ## name-out-of-scope
    deps   = [
        ":Lambda", ## (Lambda Lambda)
        ":Debuginfo", ## (Lambda Debuginfo)
        "//typing:Types",
        "//stdlib:Stdlib.String",
        "//typing:Printtyp",
        "//stdlib:Stdlib.Printf",
        "//typing:Primitive",
        "//parsing:Location",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Lexing",
        "//typing:Ident",
        "//stdlib:Stdlib.Format",
        "//utils:Clflags",
    ],
    visibility = [
        "//bytecomp:__pkg__",
        "//driver:__pkg__",
        "//middle_end:__pkg__",
        "//middle_end/flambda:__pkg__",
        "//toplevel:__pkg__",
    ]
)

baseline_signature(
    name = "Printlambda_cmi",
    src  = "printlambda.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Lambda",
        ":Debuginfo",
        "//parsing:Asttypes_cmi",
        "//typing:Types",
        "//stdlib:Stdlib.Format",
    ]
)

## root Makefile:
# lambda/runtimedef.ml: lambda/generate_runtimedef.sh runtime/caml/fail.h \
#     runtime/primitives
# 	$^ > $@

# make log:
# ./boot/ocamlrun ./ocamlopt
# -nostdlib -I ./stdlib -I otherlibs/dynlink
# -g -strict-sequence -principal -absname -w +a-4-9-40-41-42-44-45-48 -warn-error +a -bin-annot -strict-formats
# -I lambda ... -I toplevel
# -c lambda/runtimedef.ml

baseline_module(
    name   = "Runtimedef",
    struct = "runtimedef.ml",
    sig    = "Runtimedef_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib"
    ],
    visibility = [
        "//asmcomp:__pkg__",
        "//bytecomp:__pkg__",
        "//otherlibs/dynlink:__pkg__",
        "//toplevel:__pkg__",
    ]
)

genrule(
    name = "runtimedef_ml",
    outs = ["runtimedef.ml"],
    srcs = [
        "generate_runtimedef.sh",
        "//runtime/caml:fail.h",
        "//runtime:primitives"
    ],
    cmd = " ".join([
        "$(location :generate_runtimedef.sh)",
        "$(location //runtime/caml:fail.h)",
        "$(location //runtime:primitives)",
        " > $@"
    ]),
    visibility = ["//visibility:public"]
)

baseline_signature(
    name = "Runtimedef_cmi",
    src  = "runtimedef.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib"
    ],
)

baseline_module(
    name   = "Simplif",
    struct = "simplif.ml",
    sig    = "Simplif_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Lambda", ## (Lambda Lambda)
        ":Debuginfo", ## (Lambda Debuginfo)
        ":Tmc",
        "//utils:Warnings",
        "//typing:Primitive",
        "//stdlib:Stdlib.Option",
        "//parsing:Location",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Int",
        "//typing:Ident",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Fun",
        "//utils:Clflags",
    ],
    visibility = [
        "//asmcomp:__pkg__",
        "//bytecomp:__pkg__",
        "//driver:__pkg__",
        "//middle_end:__subpackages__",
        "//toplevel:__pkg__",
    ]
)

baseline_signature(
    name = "Simplif_cmi",
    src  = "simplif.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Lambda", ## (Lambda Lambda)
        ":Debuginfo", ## (Lambda Debuginfo)
        "//parsing:Asttypes_cmi",
        "//typing:Ident",
    ]
)

baseline_module(
    name   = "Switch",
    struct = "switch.ml",
    sig    = "Switch_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.Map",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib"
    ],
    visibility = [
        "//bytecomp:__pkg__",
        "//middle_end:__subpackages__"
     ]
)

baseline_signature(
    name = "Switch_cmi",
    src  = "switch.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib"
    ],
    visibility = ["//middle_end/flambda:__pkg__"]
)

baseline_module(
    name   = "Tmc",
    struct = "tmc.ml",
    sig    = "Tmc_cmi",
    opts = MODULE_OPTS + ["-w", "-40"], ## name-out-of-scope
    deps   = [
        ":Lambda"
    ],
)

baseline_signature(
    name = "Tmc_cmi",
    src  = "tmc.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Lambda_cmi",
    ],
)

baseline_module(
    name   = "Translattribute",
    struct = "translattribute.ml",
    sig    = "Translattribute_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//parsing:Location",
        "//parsing:Longident",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Option",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.Result",
        "//stdlib:Stdlib.String",
        "//typing:Typedtree",
        "//utils:Config",
        "//utils:Misc",
        "//utils:Warnings",
        ":Debuginfo",
        ":Lambda",
    ]
)

baseline_signature(
    name = "Translattribute_cmi",
    src  = "translattribute.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Lambda", ## (Lambda Lambda)
        ":Debuginfo", ## (Lambda Debuginfo)
        "//typing:Typedtree_cmi",
        "//parsing:Parsetree_cmi",
        "//parsing:Location",
    ]
)

baseline_module(
    name   = "Translclass",
    struct = "translclass.ml",
    sig    = "Translclass_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Translobj",
        ":Translcore",
        ":Matching",
        ":Lambda",
        ":Debuginfo",
        "//typing:Types",
        ## (Typeopt)
        "//typing:Typedtree",
        "//stdlib:Stdlib.String",
        "//typing:Path",
        "//stdlib:Stdlib.Obj",
        ## (Meths)
        ## (MethSet)
        "//parsing:Location",
        "//stdlib:Stdlib.List",
        "//typing:Ident",
        "//stdlib:Stdlib.Format",
        "//typing:Env",
        "//utils:Clflags",
        "//stdlib:CamlinternalOO",
        "//typing:Btype",
    ]
)

baseline_signature(
    name = "Translclass_cmi",
    src  = "translclass.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Lambda", ## (Lambda Lambda)
        ":Debuginfo", ## (Lambda Debuginfo)
         "//typing:Typedtree_cmi",
        "//parsing:Location",
        "//typing:Ident",
        "//stdlib:Stdlib.Format",
        "//parsing:Asttypes_cmi",
    ]
)

baseline_module(
    name   = "Translcore",
    struct = "translcore.ml",
    sig    = "Translcore_cmi",
    opts = MODULE_OPTS + ["-w", "-40"], ## name-out-of-scope
    deps   = [
        ":Translprim", ## (Lambda Translprim)
        ":Translobj", ## (Lambda Translobj)
        ":Translattribute", ## (Lambda Translattribute)
        ":Matching", ## (Lambda Matching)
        ":Lambda", ## (Lambda Lambda)
        ":Debuginfo", ## (Lambda Debuginfo)
        "//typing:Types",
        ## (Typeopt)
        "//typing:Typedtree",
        "//typing:Typecore",
        "//typing:Printtyp",
        "//stdlib:Stdlib.Printf",
        "//typing:Primitive",
        "//typing:Predef",
        "//typing:Path",
        ## (Parmatch)
        "//stdlib:Stdlib.Option",
        "//stdlib:Stdlib.Obj",
        "//utils:Misc",
        "//parsing:Longident",
        "//parsing:Location",
        "//stdlib:Stdlib.List",
        "//typing:Ident",
        "//stdlib:Stdlib.Format",
        "//typing:Env",
        "//utils:Config",
        "//utils:Clflags",
        "//typing:Btype",
        "//stdlib:Stdlib.Array",
    ]
)

baseline_signature(
    name = "Translcore_cmi",
    src  = "translcore.mli",
    opts = SIG_OPTS,
    deps   = [
        "//parsing:Asttypes_cmi",
        "//parsing:Location",
        "//parsing:Parsetree_cmi",
        "//stdlib:Stdlib.Format",
        "//typing:Env",
        "//typing:Ident",
        "//typing:Path",
        "//typing:Typedtree_cmi",
        ":Debuginfo",
        ":Lambda",
    ]
)

baseline_module(
    name   = "Translmod",
    struct = "translmod.ml",
    sig    = "Translmod_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Translprim", ## (Lambda Translprim)
        ":Translobj", ## (Lambda Translobj)
        ":Translcore", ## (Lambda Translcore)
        ":Translclass", ## (Lambda Translclass)
        ":Translattribute", ## (Lambda Translattribute)
        ":Lambda", ## (Lambda Lambda)
        ":Debuginfo", ## (Lambda Debuginfo)
        "//typing:Types",
        "//typing:Typedtree",
        "//stdlib:Stdlib.Result",
        "//typing:Primitive",
        "//typing:Predef",
        "//typing:Path",
        "//stdlib:Stdlib.Option",
        ## (Mtype)
        "//utils:Misc",
        "//parsing:Location",
        "//stdlib:Stdlib.List",
        "//typing:Ident",
        "//stdlib:Stdlib.Format",
        "//typing:Env",
        "//typing:Ctype",
        "//utils:Clflags",
        "//stdlib:Stdlib.Array",
    ],
    visibility = [
        "//asmcomp:__pkg__",
        "//bytecomp:__pkg__",
        "//driver:__pkg__",
        "//toplevel:__pkg__",
    ]
)

baseline_signature(
    name = "Translmod_cmi",
    src  = "translmod.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Lambda", ## (Lambda Lambda)
        ":Debuginfo", ## (Lambda Debuginfo)
        "//parsing:Asttypes_cmi",
        "//typing:Typedtree_cmi",
        "//typing:Primitive",
        "//parsing:Location",
        "//typing:Ident",
    ]
)

baseline_module(
    name   = "Translobj",
    struct = "translobj.ml",
    sig    = "Translobj_cmi",
    opts = MODULE_OPTS + ["-w", "-40"], ## name-out-of-scope
    deps   = [
        ":Lambda", ## (Lambda Lambda)
        ":Debuginfo", ## (Lambda Debuginfo)
        "//typing:Primitive",
        "//utils:Misc",
        "//stdlib:Stdlib.List",
        "//typing:Ident",
        "//stdlib:Stdlib.Hashtbl",
        "//typing:Env",
        "//utils:Config",
        "//utils:Clflags",
        "//typing:Btype",
    ]
)

baseline_signature(
    name = "Translobj_cmi",
    src  = "translobj.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Lambda", ## (Lambda Lambda)
        ":Debuginfo", ## (Lambda Debuginfo)
        "//parsing:Asttypes_cmi",
        "//typing:Ident",
        "//typing:Env",
    ]
)

baseline_module(
    name   = "Translprim",
    struct = "translprim.ml",
    sig    = "Translprim_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Matching", ## (Lambda Matching)
        ":Lambda", ## (Lambda Lambda)
        ":Debuginfo", ## (Lambda Debuginfo)
        "//typing:Types",
        ## (Typeopt)
        "//typing:Typedtree",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Printf",
        "//typing:Primitive",
        "//typing:Predef",
        "//typing:Path",
        "//utils:Misc",
        "//parsing:Location",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Lexing",
        "//typing:Ident",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Filename",
        "//typing:Env",
        "//utils:Config",
        "//utils:Clflags",
    ]
)

baseline_signature(
    name = "Translprim_cmi",
    src  = "translprim.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Lambda",
        ":Debuginfo",
        "//parsing:Asttypes_cmi",
        "//typing:Types",
         "//typing:Typedtree_cmi",
        "//typing:Primitive",
        "//typing:Path",
        "//parsing:Location",
        "//typing:Ident",
        "//stdlib:Stdlib.Format",
        "//typing:Env",
    ]
)

